Fix navbar overlapping
Adjust the padding according to http://getbootstrap.com/components/#navbar-fixed-top

Fix #124

--- a/sipa/static/css/style.css
+++ b/sipa/static/css/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-	margin-top: 40px;
+	padding-top: 70px;
 }
 
 @media (min-width: 768px) {
